# aie

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
cache/atb/AA/AAAQKTZKLRYKHR-UHFFFAOYSA-N/: excit_graph.pt  features.json  opt_graph.pt  result.json  status.json
cache/atb/AA/AAFDQFVQNDBMNA-UHFFFAOYSA-N/: canonical_smiles.txt  status.json
cache/atb/AA/AAHQWSRRIKEFES-UHFFFAOYSA-N/: canonical_smiles.txt  features.json  result.json  status.json
cache/atb/AB/ABNRGKSAIONSCC-UHFFFAOYSA-M/: canonical_smiles.txt  status.json
cache/atb/AC/ACOXPTOKQRAWDV-UHFFFAOYSA-N/: canonical_smiles.txt  status.json
cache/atb/AD/ADUPTVXQHYAPAR-VFAUKVELSA-N/: canonical_smiles.txt  features.json  result.json  status.json
cache/atb/AG/AGOZGUAZHRGBCP-UHFFFAOYSA-N/: canonical_smiles.txt  features.json  result.json  status.json
config/: default.yaml
data/: atb_features.parquet  atb_qc.parquet  data.csv  graph_build_manifest.json  molecule_table.parquet  private_clean.parquet  rdkit_features.parquet  run_manifest.json
doc/: process.md  process_summary.md  roadmap.md  schemas.md
src/: cli.py
src/agents/: atb_agent.py  data_agent.py
src/chem/: __init__.py  atb_parser.py  atb_runner.py  batch_runner.py
src/data/: canonicalizer.py  loader.py  pipeline.py  rdkit_descriptors.py  standardizer.py
src/graph/: __init__.py  build_evidence_table_v1_p1.py  build_light_graph_v1_p2.py  validate_evidence_table.py  validate_graph_tables.py
src/utils/: logging.py
tests/: test_atb_agent.py  test_atb_parser.py  test_cli.py  test_data_agent.py
(+4972 files in other folders)
