[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uncertainty-aware-aie"
version = "0.1.0"
description = "Uncertainty-aware mechanism discovery for AIE molecules (V0)"
readme = "CLAUDE.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "rdkit>=2023.3.1",
    "pyarrow>=12.0.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3.0",
    "faiss-cpu>=1.7.4",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
